assignment/assignment1/assignment1-reference/.antlr/BKITParser.py
# Generated from d:\Study2\HCMUT\semester212\PPL\code\assignment\assignment1\assignment1-reference\BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'-'", "'-.'", "'!'", "'*'", "'*.'", "'\\'", 
                     "'\\.'", "'%'", "'+'", "'+.'", "'&&'", "'||'", "'main'", 
                     "'Body'", "'Break'", "'Continue'", "'Do'", "'Else'", 
                     "'ElseIf'", "'EndBody'", "'EndIf'", "'EndFor'", "'EndWhile'", 
                     "'For'", "'Function'", "'If'", "'Parameter'", "'Return'", 
                     "'Then'", "'Var'", "'While'", "'EndDo'", "<INVALID>", 
                     "<INVALID>", "'='", "'('", "')'", "'['", "']'", "'{'", 
                     "'}'", "':'", "'.'", "','", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "MAIN", "BODY", "BREAK", "CONTINUE", 
                      "DO", "ELSE", "ELSEIF", "ENDBODY", "ENDIF", "ENDFOR", 
                      "ENDWHILE", "FOR", "FUNCTION", "IF", "PARAMETER", 
                      "RETURN", "THEN", "VAR", "WHILE", "ENDDO", "WS", "CMT", 
                      "EQ", "LP", "RP", "LS", "RS", "LB", "RB", "COLON", 
                      "DOT", "COMMA", "SEMI", "ESCAPE", "RELOP", "ID", "INT", 
                      "FLOAT", "BOOL", "STRING", "ARRAY", "ILLEGAL_ESCAPE", 
                      "UNCLOSE_STRING", "UNTERMINATED_COMMENT", "ERROR_CHAR" ]

    RULE_litlist = 0
    RULE_literal = 1
    RULE_program = 2
    RULE_globdecs = 3
    RULE_funcdecs = 4
    RULE_funcdeclist = 5
    RULE_vardec = 6
    RULE_varlist = 7
    RULE_varlist_ = 8
    RULE_variable = 9
    RULE_dim = 10
    RULE_initlist = 11
    RULE_initlist_ = 12
    RULE_init = 13
    RULE_assign = 14
    RULE_dim_ = 15
    RULE_ifstmt = 16
    RULE_cond_block = 17
    RULE_elif_block = 18
    RULE_else_block = 19
    RULE_forstmt = 20
    RULE_iter_block = 21
    RULE_iter_init = 22
    RULE_iter_cond = 23
    RULE_iter_update = 24
    RULE_whilestmt = 25
    RULE_dowhilestmt = 26
    RULE_breakstmt = 27
    RULE_continuestmt = 28
    RULE_callstmt = 29
    RULE_returnstmt = 30
    RULE_stmtlist = 31
    RULE_vardeclist = 32
    RULE_stamentlist = 33
    RULE_stmt = 34
    RULE_funcdec = 35
    RULE_paramdec = 36
    RULE_bodydec = 37
    RULE_mainfunc = 38
    RULE_call = 39
    RULE_expr = 40
    RULE_relexpr = 41
    RULE_operand = 42
    RULE_exprlist = 43
    RULE_exprlist_ = 44

    ruleNames =  [ "litlist", "literal", "program", "globdecs", "funcdecs", 
                   "funcdeclist", "vardec", "varlist", "varlist_", "variable", 
                   "dim", "initlist", "initlist_", "init", "assign", "dim_", 
                   "ifstmt", "cond_block", "elif_block", "else_block", "forstmt", 
                   "iter_block", "iter_init", "iter_cond", "iter_update", 
                   "whilestmt", "dowhilestmt", "breakstmt", "continuestmt", 
                   "callstmt", "returnstmt", "stmtlist", "vardeclist", "stamentlist", 
                   "stmt", "funcdec", "paramdec", "bodydec", "mainfunc", 
                   "call", "expr", "relexpr", "operand", "exprlist", "exprlist_" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    MAIN=13
    BODY=14
    BREAK=15
    CONTINUE=16
    DO=17
    ELSE=18
    ELSEIF=19
    ENDBODY=20
    ENDIF=21
    ENDFOR=22
    ENDWHILE=23
    FOR=24
    FUNCTION=25
    IF=26
    PARAMETER=27
    RETURN=28
    THEN=29
    VAR=30
    WHILE=31
    ENDDO=32
    WS=33
    CMT=34
    EQ=35
    LP=36
    RP=37
    LS=38
    RS=39
    LB=40
    RB=41
    COLON=42
    DOT=43
    COMMA=44
    SEMI=45
    ESCAPE=46
    RELOP=47
    ID=48
    INT=49
    FLOAT=50
    BOOL=51
    STRING=52
    ARRAY=53
    ILLEGAL_ESCAPE=54
    UNCLOSE_STRING=55
    UNTERMINATED_COMMENT=56
    ERROR_CHAR=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class LitlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.LiteralContext)
            else:
                return self.getTypedRuleContext(BKITParser.LiteralContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_litlist




    def litlist(self):

        localctx = BKITParser.LitlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_litlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.literal()
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 91
                self.match(BKITParser.COMMA)
                self.state = 92
                self.literal()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(BKITParser.INT, 0)

        def FLOAT(self):
            return self.getToken(BKITParser.FLOAT, 0)

        def BOOL(self):
            return self.getToken(BKITParser.BOOL, 0)

        def STRING(self):
            return self.getToken(BKITParser.STRING, 0)

        def ARRAY(self):
            return self.getToken(BKITParser.ARRAY, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_literal




    def literal(self):

        localctx = BKITParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_literal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.INT) | (1 << BKITParser.FLOAT) | (1 << BKITParser.BOOL) | (1 << BKITParser.STRING) | (1 << BKITParser.ARRAY))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def globdecs(self):
            return self.getTypedRuleContext(BKITParser.GlobdecsContext,0)


        def funcdecs(self):
            return self.getTypedRuleContext(BKITParser.FuncdecsContext,0)


        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_program




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.globdecs()
            self.state = 101
            self.funcdecs()
            self.state = 102
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GlobdecsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardec(self):
            return self.getTypedRuleContext(BKITParser.VardecContext,0)


        def globdecs(self):
            return self.getTypedRuleContext(BKITParser.GlobdecsContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_globdecs




    def globdecs(self):

        localctx = BKITParser.GlobdecsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_globdecs)
        try:
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.vardec()
                self.state = 105
                self.globdecs()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.vardec()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdecsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcdeclist(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.FuncdeclistContext)
            else:
                return self.getTypedRuleContext(BKITParser.FuncdeclistContext,i)


        def mainfunc(self):
            return self.getTypedRuleContext(BKITParser.MainfuncContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_funcdecs




    def funcdecs(self):

        localctx = BKITParser.FuncdecsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_funcdecs)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.funcdeclist()
            self.state = 112
            self.mainfunc()
            self.state = 113
            self.funcdeclist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcdec(self):
            return self.getTypedRuleContext(BKITParser.FuncdecContext,0)


        def funcdeclist(self):
            return self.getTypedRuleContext(BKITParser.FuncdeclistContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_funcdeclist




    def funcdeclist(self):

        localctx = BKITParser.FuncdeclistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_funcdeclist)
        try:
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.funcdec()
                self.state = 116
                self.funcdeclist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def varlist(self):
            return self.getTypedRuleContext(BKITParser.VarlistContext,0)


        def EQ(self):
            return self.getToken(BKITParser.EQ, 0)

        def initlist(self):
            return self.getTypedRuleContext(BKITParser.InitlistContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_vardec




    def vardec(self):

        localctx = BKITParser.VardecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_vardec)
        try:
            self.state = 133
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.match(BKITParser.VAR)
                self.state = 122
                self.match(BKITParser.COLON)
                self.state = 123
                self.varlist()
                self.state = 124
                self.match(BKITParser.EQ)
                self.state = 125
                self.initlist()
                self.state = 126
                self.match(BKITParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.match(BKITParser.VAR)
                self.state = 129
                self.match(BKITParser.COLON)
                self.state = 130
                self.varlist()
                self.state = 131
                self.match(BKITParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(BKITParser.VariableContext,0)


        def varlist_(self):
            return self.getTypedRuleContext(BKITParser.Varlist_Context,0)


        def getRuleIndex(self):
            return BKITParser.RULE_varlist




    def varlist(self):

        localctx = BKITParser.VarlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_varlist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.variable()
            self.state = 136
            self.varlist_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Varlist_Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(BKITParser.COMMA, 0)

        def variable(self):
            return self.getTypedRuleContext(BKITParser.VariableContext,0)


        def varlist_(self):
            return self.getTypedRuleContext(BKITParser.Varlist_Context,0)


        def getRuleIndex(self):
            return BKITParser.RULE_varlist_




    def varlist_(self):

        localctx = BKITParser.Varlist_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_varlist_)
        try:
            self.state = 143
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.match(BKITParser.COMMA)
                self.state = 139
                self.variable()
                self.state = 140
                self.varlist_()
                pass
            elif token in [BKITParser.BODY, BKITParser.EQ, BKITParser.SEMI]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def dim(self):
            return self.getTypedRuleContext(BKITParser.DimContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_variable




    def variable(self):

        localctx = BKITParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(BKITParser.ID)
            self.state = 146
            self.dim()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LS(self):
            return self.getToken(BKITParser.LS, 0)

        def INT(self):
            return self.getToken(BKITParser.INT, 0)

        def RS(self):
            return self.getToken(BKITParser.RS, 0)

        def dim(self):
            return self.getTypedRuleContext(BKITParser.DimContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_dim




    def dim(self):

        localctx = BKITParser.DimContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_dim)
        try:
            self.state = 153
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.LS]:
                self.enterOuterAlt(localctx, 1)
                self.state = 148
                self.match(BKITParser.LS)
                self.state = 149
                self.match(BKITParser.INT)
                self.state = 150
                self.match(BKITParser.RS)
                self.state = 151
                self.dim()
                pass
            elif token in [BKITParser.BODY, BKITParser.EQ, BKITParser.COMMA, BKITParser.SEMI]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def init(self):
            return self.getTypedRuleContext(BKITParser.InitContext,0)


        def initlist_(self):
            return self.getTypedRuleContext(BKITParser.Initlist_Context,0)


        def getRuleIndex(self):
            return BKITParser.RULE_initlist




    def initlist(self):

        localctx = BKITParser.InitlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_initlist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.init()
            self.state = 156
            self.initlist_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Initlist_Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(BKITParser.COMMA, 0)

        def init(self):
            return self.getTypedRuleContext(BKITParser.InitContext,0)


        def initlist_(self):
            return self.getTypedRuleContext(BKITParser.Initlist_Context,0)


        def getRuleIndex(self):
            return BKITParser.RULE_initlist_




    def initlist_(self):

        localctx = BKITParser.Initlist_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_initlist_)
        try:
            self.state = 163
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 158
                self.match(BKITParser.COMMA)
                self.state = 159
                self.init()
                self.state = 160
                self.initlist_()
                pass
            elif token in [BKITParser.SEMI]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(BKITParser.ExprContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_init




    def init(self):

        localctx = BKITParser.InitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_init)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def dim_(self):
            return self.getTypedRuleContext(BKITParser.Dim_Context,0)


        def EQ(self):
            return self.getToken(BKITParser.EQ, 0)

        def expr(self):
            return self.getTypedRuleContext(BKITParser.ExprContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_assign




    def assign(self):

        localctx = BKITParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.match(BKITParser.ID)
            self.state = 168
            self.dim_()
            self.state = 169
            self.match(BKITParser.EQ)
            self.state = 170
            self.expr()
            self.state = 171
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Dim_Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LS(self):
            return self.getToken(BKITParser.LS, 0)

        def expr(self):
            return self.getTypedRuleContext(BKITParser.ExprContext,0)


        def RS(self):
            return self.getToken(BKITParser.RS, 0)

        def dim_(self):
            return self.getTypedRuleContext(BKITParser.Dim_Context,0)


        def getRuleIndex(self):
            return BKITParser.RULE_dim_




    def dim_(self):

        localctx = BKITParser.Dim_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_dim_)
        try:
            self.state = 179
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 173
                self.match(BKITParser.LS)
                self.state = 174
                self.expr()
                self.state = 175
                self.match(BKITParser.RS)
                self.state = 176
                self.dim_()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfstmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(BKITParser.IF, 0)

        def cond_block(self):
            return self.getTypedRuleContext(BKITParser.Cond_blockContext,0)


        def elif_block(self):
            return self.getTypedRuleContext(BKITParser.Elif_blockContext,0)


        def else_block(self):
            return self.getTypedRuleContext(BKITParser.Else_blockContext,0)


        def ENDIF(self):
            return self.getToken(BKITParser.ENDIF, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_ifstmt




    def ifstmt(self):

        localctx = BKITParser.IfstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_ifstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            self.match(BKITParser.IF)
            self.state = 182
            self.cond_block()
            self.state = 183
            self.elif_block()
            self.state = 184
            self.else_block()
            self.state = 185
            self.match(BKITParser.ENDIF)
            self.state = 186
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Cond_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(BKITParser.ExprContext,0)


        def THEN(self):
            return self.getToken(BKITParser.THEN, 0)

        def stmtlist(self):
            return self.getTypedRuleContext(BKITParser.StmtlistContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_cond_block




    def cond_block(self):

        localctx = BKITParser.Cond_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_cond_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 188
            self.expr()
            self.state = 189
            self.match(BKITParser.THEN)
            self.state = 190
            self.stmtlist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

